# Spencer-app

./: .gitignore  1_INSTALLER.bat  2_LANCER.bat  3_ARRETER.bat  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  errors.py  jobs.py  main.py  schemas.py
backend/app/api/routes/: analysis.py
backend/core/: cache.py  cost.py  geometry.py  layer_index.py  layers.py  search.py  slicing.py  spencer.py  validation.py
backend/tests/: test_api.py  test_cache.py  test_cost.py  test_geometry.py  test_layer_index.py  test_layers.py  test_search_geometry.py  test_slicing.py  test_spencer.py  test_validation.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/collaborateurs/: page.tsx
frontend/src/app/guide/: page.tsx
frontend/src/components/analysis/: SpencerSettings.tsx
frontend/src/components/geometry/: SlopeCanvas.tsx
frontend/src/components/hydro/: WaterTableInput.tsx
frontend/src/components/layers/: LayerPanel.tsx
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/components/results/: ResultsSummary.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: analysisStore.ts
frontend/src/styles/: theme.ts
